<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkbox_is_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/module_team_checkbox_is_caption" />
    </RelativeLayout>

    <!-- 号码 -->
    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp" 
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_team_textview_number" >
        </TextView>

        <EditText
            android:id="@+id/edit_number"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>

    <!-- 位置 -->
    <LinearLayout
        android:id="@+id/linearyoutDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp" 
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_team_textview_position" >
        </TextView>

        <EditText
            android:id="@+id/edit_position"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>

    <!-- 名字 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_team_textview_name" >
        </TextView>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>

    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:orientation="horizontal" >
	    <Button 
	        android:id="@+id/button_confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:background="@drawable/button_comfirm" />
    </RelativeLayout>

</LinearLayout>